--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,12 @@ libc = "0.2.147"
 memmap2 = "0.7.1"
 parking_lot = "0.12.1"
 rio = "0.9.4"
+
+# For examples
+serde = {version = "1.0.188", features = ["derive"]}
+csv = "1.2.2"
+flate2 = "1.0.27"
+serde_derive = "1.0.188"
+heed = "0.11.0"
+rand = "0.8.5"
+itertools = "0.11.0"
