--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ heed = "0.11.0"
 rand = "0.8.5"
 itertools = "0.11.0"
 quickcheck = "1.0.3"
+arrow2 = {version = "0.17.4", features = ["compute", "io_ipc"]}
