--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ rand = "0.8.5"
 itertools = "0.11.0"
 quickcheck = "1.0.3"
 arrow2 = {version = "0.17.4", features = ["compute", "io_ipc"]}
+# polars-core = "0.32.1"
