--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,6 @@ rand = "0.8.5"
 itertools = "0.11.0"
 quickcheck = "1.0.3"
 arrow2 = {version = "0.17.4", features = ["compute", "io_ipc"]}
+quickcheck_macros = "1.0.0"
+proptest = "1.2.0"
 # polars-core = "0.32.1"
